Fixed: z-index

--- a/client/src/components/Generics/Modals/Modal.module.scss
+++ b/client/src/components/Generics/Modals/Modal.module.scss
@@ -15,7 +15,7 @@
 
   border-radius: 5px;
 
-  z-index: 3;
+  z-index: 4;
 }
 
 .display-block {
