--- a/client/src/components/Pages/Home/Planning.module.scss
+++ b/client/src/components/Pages/Home/Planning.module.scss
@@ -10,6 +10,8 @@
   height: fit-content;
   padding: 1rem;
   row-gap: 0.5rem;
+
+  z-index: 4;
 }
 
 .Accept {
